# noted

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: authclient.rs  backend.rs  config.rs  credentials.rs  error.rs  front_matter.rs  http.rs  httpurl.rs  lib.rs  main.rs  mcp.rs  newtype.rs  notes.rs  oauth.rs  password.rs  scope.rs  search.rs  serve.rs  tasks.rs  tools.rs  types.rs  util.rs
src/cli/: admin.rs  auth.rs  dispatch.rs  mod.rs
src/oauth/: admin.rs  db.rs  issuer.rs  macaroon.rs  service.rs  types.rs
tests/: rust_admin.rs  rust_auth_service.rs  rust_backend.rs  rust_cli.rs  rust_core.rs  rust_credentials.rs  rust_feature_gating.rs  rust_http.rs  rust_integration.rs  rust_oauth.rs  rust_scopes.rs  rust_task.rs  rust_tool_registry.rs
tests/common/: mod.rs
tests/fixtures/notes/: Inbox.md
tests/fixtures/notes/.trash/: old-idea.md
tests/fixtures/notes/Log/2026/07/: 2026-07-01T09-00-00.000000.md
tests/fixtures/notes/daily/: 2026-07-01.md
tests/fixtures/notes/people/: contacts.md
tests/fixtures/notes/projects/: ideas.md  notes-mcp.md
