[package]
name = "noted"
version = "0.1.0"
edition = "2021"
description = "A tree of .md notes exposed as an MCP server and HTTP API over one set of file operations (Rust/Axum rewrite)."
license = "MIT"
rust-version = "1.90"

[lib]
name = "noted"

[[bin]]
name = "noted"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std", "io-util", "signal", "sync", "time", "net"] }
clap = { version = "4", features = ["derive", "env"] }
anstyle = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
scrypt = { version = "0.11", default-features = false, features = ["simple", "std"] }
sha2 = "0.10"
rand = "0.8"
url = "2"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
path-clean = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
schemars = "0.8"
governor = "0.8"
maud = "0.26"
dashmap = "6"
grep = "0.3"
ignore = "0.4"
rmcp = { version = "2.1.0", features = ["server", "transport-streamable-http-server", "transport-io"] }
http = "1.4.2"
oxide-auth = "0.6.1"
dirs = "6.0.0"
thiserror = "2.0.18"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
redb = "2"
open = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "async-io", "crypto-rust"] }
macaroon = "0.3"
humantime = "2"

[features]
# Compiles in test-only hooks (e.g. OAuth token injection) that must never ship
# in a production binary. Enabled for the test build via the self dev-dependency
# below; absent from a plain `cargo build`.
test-util = []

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# Self-dependency solely to turn on `test-util` when compiling the test targets.
noted = { path = ".", features = ["test-util"] }

[profile.release]
strip = true
